tests/transpiler/x/hs/str_builtin.hs
-- Generated by Mochi transpiler v0.10.31 on 2025-07-20 01:18 GMT+7
import Data.List (isInfixOf, union, intersect, (\\))
main :: IO ()
main = do
    print (str 123)
